--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Taubatexas Robotics</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/normalize.css">
+    <link rel="icon" href="./assets/taubatexas_logo.png">
 </head>
 <body>
     <div id="container">
