--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 </ul>
             </nav>
         </header>
+
+        <div class="parallax">
+            <span>Tauba</span>texas Robotics
+            <p>Oferecendo oportunidades para aqueles que almejam<br> crescer com a tecnologia!</p>
+            <a href="" class="tbt-btn">Saiba Mais!</a>
+        </div>
     </div>
     <script src="./script/script.js"></script>
 </body>
