--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="icon" href="./assets/taubatexas_logo.png">
 </head>
 <body>
-    <div id="container">
         <header>
             <nav>
                 <a href="/" class="logo">
@@ -31,13 +30,21 @@
                 </ul>
             </nav>
         </header>
-
-        <div class="parallax">
-            <span>Tauba</span>texas Robotics
-            <p>Oferecendo oportunidades para aqueles que almejam<br> crescer com a tecnologia!</p>
-            <a href="" class="tbt-btn">Saiba Mais!</a>
-        </div>
-    </div>
+        
+        <main class="container">
+            <div class="parallax">
+                <span>Tauba</span>texas Robotics
+                <p>Oferecendo oportunidades para aqueles que almejam<br> crescer com a tecnologia!</p>
+                <a href="" class="tbt-btn">Saiba Mais!</a>
+            </div>
+            <div class="welcome">
+                <span>Tauba</span>texas Robotics
+                <p>Oferecendo oportunidades para aqueles que almejam<br> crescer com a tecnologia!</p>
+                <a href="" class="tbt-btn">Saiba Mais!</a>
+            </div>
+            <hr>
+        </main>
+        
     <script src="./script/script.js"></script>
 </body>
 </html>
