--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
                 <a href="" class="tbt-btn">Saiba Mais!</a>
             </div>
             <hr>
+            <div class="conteudo">
+                <div class="img-conteudo">
+                    <img src="" alt="">
+                </div>
+                <div class="text">
+                    <h2 class="title">
+
+                    </h2>
+                    <p class="content-post">
+
+                    </p>
+                </div>
+            </div>
         </main>
         
     <script src="./script/script.js"></script>
