--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <hr>
             <div class="conteudo">
                 <div class="img-conteudo">
-                    <img src="" alt="">
+                    <img src="./assets/content2.jpg" alt="">
                 </div>
                 <div class="text">
                     <h2 class="title">
-
+                        Quem nós somos?
                     </h2>
                     <p class="content-post">
 
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </main>
-        
+         
     <script src="./script/script.js"></script>
 </body>
 </html>
