--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="text">
                     <h2 class="title">
-                        Quem somos nós?
+                        Nossa equipe!
                     </h2>
                     <p class="content-post">
 
