--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <h2 class="title">
                         Nossa equipe!
                     </h2>
-                    <!--<p class="content-post">
+                    <p class="content-post">
                         Olá! Somos o Taubatexas #7459! Nosso intuito é mudar a vida de jovens 
                         adolescentes e inspirá-los através da ciência e tecnologia, proporcionando-os 
                         algo novo em meio a um cenário de dificuldades sociais.
-                    </p>-->
+                    </p>
                 </div>
             </div>
             
