--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="" class="tbt-btn">Saiba Mais!</a>
             </div>
             <hr>
-            <div class="conteudo-img">
+            <div id="conteudo-img">
                 <div class="img-conteudo">
                     <img src="./assets/content2.jpg" alt="">
                 </div>
@@ -58,7 +58,21 @@
                     </p>
                 </div>
             </div>
-            
+            <div id="history">
+                <h2 class="title-alone">
+                    lutas e lutas!
+                </h2>
+                <p class="content-post-alone">
+                    O projeto teve início no dia 15 de agosto de 2018, a apenas sete meses da nossa primeira 
+                    competição regional que participamos que aconteceu em Março de 2019, em Little Rock, Arkansas, 
+                    EUA, onde nós, contra mais de 50 outras equipes, conquistamos o nosso primeiro prêmio de melhor 
+                    equipe novata, chamado “Rookie All-Star”. Com esta conquista, fomos para a competição mundial 
+                    um mês depois, em Abril de 2019, em Houston, Texas, EUA. Ainda em 2019, participamos de outros 
+                    eventos como a T.B.R. (Torneio Brasil de Robótica) e a Off Season Brasil 2019 em Novo Hamburgo, 
+                    Rio Grande do Sul. Já em  março de 2020 participamos da regional de Del Mar, Califórnia, EUA. Após 
+                    isso não participamos de mais eventos pelo início da pandemia do COVID-19.
+                </p>
+            </div>
         </main>
          
     <script src="./script/script.js"></script>
